mongo-express.yaml
apiVersion: apps/v1           # because Deployment belongs to apps group in k8s API
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app-expr: mongo-express     # this is a label that others use to match this Deployment
spec:
  replicas: 1
  selector:                     # this is where we select which pods will this Deployment manage
    matchLabels:                # by telling it which labels to match
      app-expr: mongo-express   # here we match label from line 15
  template:                     # template = pod blueprint
    metadata:
      labels:
        app-expr: mongo-express     # pod label that others (like Deployment) will match
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
---
# External Service to access mongo-express

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app-expr: mongo-express     # tell Service to match Deployment with label "app-expr: mongo-express" (line 6)
  type: LoadBalancer            # this is how we tell k8s that this is ExternalService
                                # some say that it is not the best name, because internal services also do load balancing
  ports:
    - protocol: TCP
      port: 8081                # exposed service port for internal communication (within the cluster)
      targetPort: 8081          # container port that this service targets
      nodePort: 30000           # port for external IP address (must be betweer 30000-32726)


# kubectl apply -f mongo-express.yaml
# minikube service mongo-express-service - needed in minikube to assign public IP address to the external service
