tls-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls:                                  # this is how you configure https access to myapp.com
  - hosts:
    - myapp.com
      secretName: myapp-secret-tls      # there is a special type of Secret components for tls certs
  rules:
  - host: myapp.com
    http:                               # you still use http keyword here, not https!
      paths:
      - path: /
        backend:
          serviceName: myapp-internal-service
          servicePort: 8080
